2017-11-20  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/79072
	* trans-expr.c (trans_class_vptr_len_assignment): Set from_len
	if the temporary is unlimited polymorphic.
	* trans-stmt.c (trans_associate_var): Use the fake result decl
	to obtain the 'len' field from an explicit function result when
	in that function scope.

2017-11-20  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/79072
	* gfortran.dg/class_result_5.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@254966 138bc75d-0d04-0410-961f-82ee72b054a4